Fixing web background and image clipping issues

--- a/static/ctcache.css
+++ b/static/ctcache.css
@@ -1,3 +1,8 @@
+.background {
+    background: #0d1117;
+    color: white;
+}
+
 .dashboard {
     font-family: Helvetica;
     display: grid;
